--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.1",
-    "gulp-wait": "0.0.2"
+    "gulp-wait": "0.0.2",
+    
+    "lodash.mergewith": ">=4.6.2"
   },
   "dependencies": {
     "uglify-js": "^3.4.9"
