--- a/package.json
+++ b/package.json
@@ -25,9 +25,15 @@
     "gulp-uglify": "^3.0.1",
     "gulp-wait": "0.0.2",
     
-    "lodash.mergewith": ">=4.6.2"
+    "lodash.mergewith": ">=4.6.2",
+    "lodash": ">=4.17.13",
+    "fstream": ">=1.0.12"
+
   },
   "dependencies": {
-    "uglify-js": "^3.4.9"
+    "uglify-js": "^3.4.9",
+    "lodash.mergewith": ">=4.6.2",
+    "lodash": ">=4.17.13",
+    "fstream": ">=1.0.12"
   }
 }
